--- a/src/components/SingleRest.css
+++ b/src/components/SingleRest.css
@@ -8,6 +8,7 @@
   margin: 10px;
 }
 .grid-container {
+  /*USE FLEXBOX MAYBE*/
   display: grid;
 
   grid-template-columns: auto auto auto auto auto;
